@@ -1,7 +1,6 @@
 package com.erudio.SBJP_Studies.unittest.mapper;
 
 import com.erudio.SBJP_Studies.data.dto.v1.PersonDTO;
-import com.erudio.SBJP_Studies.mapper.ObjectMapper;
 import com.erudio.SBJP_Studies.model.Person;
 import com.erudio.SBJP_Studies.unittest.mapper.mock.MockPerson;
 import org.junit.jupiter.api.BeforeEach;
@@ -9,9 +8,11 @@ import org.junit.jupiter.api.Test;
 
 import java.util.List;
 
+import static com.erudio.SBJP_Studies.mapper.ObjectMapper.parseListObjects;
+import static com.erudio.SBJP_Studies.mapper.ObjectMapper.parseObject;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class DozerConverterTest {
+public class ObjectMapperTest {
 
     MockPerson inputObject;
 
@@ -22,23 +23,23 @@ public class DozerConverterTest {
 
     @Test
     public void parseEntityToDTOTest() {
-        PersonDTO output = ObjectMapper.parseObject(inputObject.mockEntity(), PersonDTO.class);
+        PersonDTO output = parseObject(inputObject.mockEntity(), PersonDTO.class);
         assertEquals(Long.valueOf(0L), output.getId());
         assertEquals("First Name Test0", output.getFirstName());
         assertEquals("Last Name Test0", output.getLastName());
-        assertEquals("Addres Test0", output.getAddress());
+        assertEquals("Address Test0", output.getAddress());
         assertEquals("Male", output.getGender());
     }
 
     @Test
     public void parseEntityListToDTOListTest() {
-        List<PersonDTO> outputList = ObjectMapper.parseListObjects(inputObject.mockEntityList(), PersonDTO.class);
-        PersonDTO outputZero = outputList.getFirst();
+        List<PersonDTO> outputList = parseListObjects(inputObject.mockEntityList(), PersonDTO.class);
+        PersonDTO outputZero = outputList.get(0);
 
         assertEquals(Long.valueOf(0L), outputZero.getId());
         assertEquals("First Name Test0", outputZero.getFirstName());
         assertEquals("Last Name Test0", outputZero.getLastName());
-        assertEquals("Addres Test0", outputZero.getAddress());
+        assertEquals("Address Test0", outputZero.getAddress());
         assertEquals("Male", outputZero.getGender());
 
         PersonDTO outputSeven = outputList.get(7);
@@ -46,7 +47,7 @@ public class DozerConverterTest {
         assertEquals(Long.valueOf(7L), outputSeven.getId());
         assertEquals("First Name Test7", outputSeven.getFirstName());
         assertEquals("Last Name Test7", outputSeven.getLastName());
-        assertEquals("Addres Test7", outputSeven.getAddress());
+        assertEquals("Address Test7", outputSeven.getAddress());
         assertEquals("Female", outputSeven.getGender());
 
         PersonDTO outputTwelve = outputList.get(12);
@@ -54,29 +55,29 @@ public class DozerConverterTest {
         assertEquals(Long.valueOf(12L), outputTwelve.getId());
         assertEquals("First Name Test12", outputTwelve.getFirstName());
         assertEquals("Last Name Test12", outputTwelve.getLastName());
-        assertEquals("Addres Test12", outputTwelve.getAddress());
+        assertEquals("Address Test12", outputTwelve.getAddress());
         assertEquals("Male", outputTwelve.getGender());
     }
 
     @Test
     public void parseDTOToEntityTest() {
-        Person output = ObjectMapper.parseObject(inputObject.mockDTO(), Person.class);
+        Person output = parseObject(inputObject.mockDTO(), Person.class);
         assertEquals(Long.valueOf(0L), output.getId());
         assertEquals("First Name Test0", output.getFirstName());
         assertEquals("Last Name Test0", output.getLastName());
-        assertEquals("Addres Test0", output.getAddress());
+        assertEquals("Address Test0", output.getAddress());
         assertEquals("Male", output.getGender());
     }
 
     @Test
     public void parserDTOListToEntityListTest() {
-        List<Person> outputList = ObjectMapper.parseListObjects(inputObject.mockDTOList(), Person.class);
+        List<Person> outputList = parseListObjects(inputObject.mockDTOList(), Person.class);
         Person outputZero = outputList.get(0);
 
         assertEquals(Long.valueOf(0L), outputZero.getId());
         assertEquals("First Name Test0", outputZero.getFirstName());
         assertEquals("Last Name Test0", outputZero.getLastName());
-        assertEquals("Addres Test0", outputZero.getAddress());
+        assertEquals("Address Test0", outputZero.getAddress());
         assertEquals("Male", outputZero.getGender());
 
         Person outputSeven = outputList.get(7);
@@ -84,7 +85,7 @@ public class DozerConverterTest {
         assertEquals(Long.valueOf(7L), outputSeven.getId());
         assertEquals("First Name Test7", outputSeven.getFirstName());
         assertEquals("Last Name Test7", outputSeven.getLastName());
-        assertEquals("Addres Test7", outputSeven.getAddress());
+        assertEquals("Address Test7", outputSeven.getAddress());
         assertEquals("Female", outputSeven.getGender());
 
         Person outputTwelve = outputList.get(12);
@@ -92,8 +93,7 @@ public class DozerConverterTest {
         assertEquals(Long.valueOf(12L), outputTwelve.getId());
         assertEquals("First Name Test12", outputTwelve.getFirstName());
         assertEquals("Last Name Test12", outputTwelve.getLastName());
-        assertEquals("Addres Test12", outputTwelve.getAddress());
+        assertEquals("Address Test12", outputTwelve.getAddress());
         assertEquals("Male", outputTwelve.getGender());
     }
-
 }
